--- a/index.html
+++ b/index.html
@@ -51,14 +51,11 @@
     </style>
 </head>
 <body>
-    <a href="trusted_list.html">NWO</a>
-</body>
-<body>
     <div class="overlay"></div>
     <div class="content">
-        <h1 class="heading">Welcome to Our Website</h1>
-        <p class="subheading">Discover the Amazing World of...</p>
-        <a href="#" class="button">Explore Now</a>
+        <h1 class="heading">Welcome to NWO</h1>
+        <p class="subheading">Discover the Amazing World of NWO</p>
+        <a href="explore.html" class="button">Explore Now</a>
     </div>
 </body>
 </html>
