--- a/explore.html
+++ b/explore.html
@@ -28,9 +28,14 @@
 </head>
 <body>
     <div class="content">
-        <h1>Exploring the Amazing World</h1>
-        <p>Welcome to the Explore Now page! Here you can discover exciting things about our website.</p>
-        <p>Feel free to explore and enjoy your journey.</p>
+        <h1>Exploring the NWO</h1>
+        <h2>Content Details</h2>
+        <ol>
+            <li>NWO Leaders</li>
+            <li>NWO players</li>
+            <li><a href="trusted_list.html"></a>Trusted List</li>
+            <li>Logan's Love<img src="third.jpeg" alt="Rajiv's Image" width="100"></li></li>
+        </ol>
     </div>
 </body>
 </html>
