--- a/explore.html
+++ b/explore.html
@@ -31,11 +31,26 @@
         <h1>Exploring the NWO</h1>
         <h2>Content Details</h2>
         <ol>
-            <li>NWO Leaders</li>
-            <li>NWO players</li>
-            <li><a href="trusted_list.html"></a>Trusted List</li>
-            <li>Logan's Love<img src="third.jpeg" alt="Rajiv's Image" width="100"></li></li>
+            <li><a href="#">NWO Leaders</a></li>
+            <li><a href="#">NWO players</a></li>
+            <li><a href="trusted_list.html" class="button">Trusted List</a></li>
+            <li>
+                <a href="#">
+                    Logan's Love
+                    <img src="third.jpeg" alt="Rajiv's Image" width="100">
+                </a>
+            </li>
         </ol>
     </div>
 </body>
 </html>
+
+<li><a href="#">NWO Leaders</a></li>
+            <li><a href="#">NWO players</a></li>
+            <li><a href="trusted_list.html" class="button">Trusted List</a></li>
+            <li>
+                <a href="#">
+                    Logan's Love
+                    <img src="third.jpeg" alt="Rajiv's Image" width="100">
+                </a>
+            </li>
