--- a/explore.html
+++ b/explore.html
@@ -37,20 +37,10 @@
             <li>
                 <a href="#">
                     Logan's Love
-                    <img src="third.jpeg" alt="Rajiv's Image" width="100">
+                    <img src="third.jpeg" width="100">
                 </a>
             </li>
         </ol>
     </div>
 </body>
 </html>
-
-<li><a href="#">NWO Leaders</a></li>
-            <li><a href="#">NWO players</a></li>
-            <li><a href="trusted_list.html" class="button">Trusted List</a></li>
-            <li>
-                <a href="#">
-                    Logan's Love
-                    <img src="third.jpeg" alt="Rajiv's Image" width="100">
-                </a>
-            </li>
