--- a/explore.html
+++ b/explore.html
@@ -36,8 +36,8 @@
             <li><a href="trusted_list.html" class="button">Trusted List</a></li>
             <li>
                 <a href="#">
-                    Logan's Love
-                    <img src="third.jpeg" width="100">
+                    Logan's
+                    <img src="third.jpeg" alt="Love"width="100">
                 </a>
             </li>
         </ol>
