Adding 12th time

--- a/trusted_list.html
+++ b/trusted_list.html
@@ -51,13 +51,13 @@
                 { sl: 21, owner: "AKHTAR", player: "MANATA" },
                 { sl: 22, owner: "DRAGONZ", player: "TARTARUS" },
                 { sl: 23, owner: "LEO GTR", player: "SIAM" },
-                { sl: 24, owner: "KITARO", player: "ARKA" },
+                { sl: 24, owner: "KITARO", player: "Little hana(ARKA)" },
                 { sl: 25, owner: "MOVADO", player: "VALENTINO" },
                 { sl: 26, owner: "MAHADEV", player: "GALLON" },
                 { sl: 27, owner: "RHODES", player: "KOETARADJA" },
                 { sl: 28, owner: "RED DEVID", player: "MORELLE" },
                 { sl: 29, owner: "DRAGON", player: "DK CAMP" },
-                { sl: 30, owner: "KING STARK", player: "ARKA" },
+                { sl: 30, owner: "KING STARK", player: "Mountain(ARKA)" },
                 { sl: 31, owner: "TNT", player: "VENOM" },
                 { sl: 32, owner: "KOMANDO", player: "JALANGKUNG" },
                 { sl: 33, owner: "Nyipook-", player: "jawara t6" },
